# openpibot

./: .gitignore  .gitmodules  DATA_COLLECTION_CHECKLIST.md  LICENSE  README.md  ReachyVR.md  TODO.md  main.py  package.json  pyproject.toml
XLerobot_xuweiwu/hardware/: readme.md
XLerobot_xuweiwu/hardware/ongoing_upgrades/: 035wheel.stl
XLerobot_xuweiwu/software/src/: record.py
apps/quest-xlerobot/: README.md
apps/quest-xlerobot/Assets/: UniversalRenderPipelineGlobalSettings.asset
config/: vr_calibration.yaml  xlerobot.yaml
config/calibration/xlerobot/: xlerobot.json
dashboard/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: ReachyVR.md  architecture.md  calibration.md  inference.md  quest3_build_and_sideload.md  quest_parity.md  recording.md  setup.md  teleop.md  training.md  troubleshooting.md
docs/data_collection/: DATA_COLLECTION_CHECKLIST.md  README.md  index.md  phase1.md  phase2.md  phase3.md
eval/: phase0_marker_baseline_trials.jsonl
openpi/: pyproject.toml
openpibot/: __init__.py  agent_reasoning.py  cli.py  pi05_inference_runtime.py  pi05_runner.py  pi_agent_bridge.ts
openpibot/prompts/: __init__.py  system2_agent.txt
openpibot/server/: __init__.py  app.py  config.py  logging.py  schemas.py
openpibot/tools/: __init__.py  lerobot_dataset_viz.py
scripts/: _camera_preflight.py  _camera_preview_window.py  _camera_utils.py  _dashboard_camera_session.py  _molmoact2_vendor.py  _opencv_camera_patch.py  _pi05_loader.py  _webapp_camera_session.py  _xlerobot_loader.py  eval_pi05_offline.py  finetune_molmoact2.py  finetune_pi05.py  infer_molmoact2_finetuned.py  infer_pi05_finetuned.py  lerobot_dataset_viz_main.py  merge_lerobot_datasets.py  openpi_policy_server.py  pi05_inference_runner.py  push_dataset.py  run_openpi_server.sh  run_pi05_inference.py
tests/: conftest.py  test_agent_reasoning.py  test_cameras.py  test_finetune_pi05_preflight.py  test_infer_pi05_shaping.py  test_molmoact2_support.py  test_motors.py  test_native_quest_contract.py  test_quest_video_bridge.py  test_server_logging.py  test_vr_calibration_persistence.py  test_vr_recording.py  test_vr_teleop_mapping.py
webapp/backend/: api.py  cameras.py  dataset.py  test_vr_recording.py  vr_teleop.py
(+73 files in other folders)
