[project]
name = "xlerobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "jinja2>=3.1.6",
    "lerobot[dataset,feetech,intelrealsense,kinematics,pi,viz]",
    "mani-skill>=3.0.1",
    "openpi-client",
    "pynput>=1.8.2",
    "pygame>=2.5.1,<2.7.0",
    "pyyaml>=6.0.3",
    "websockets>=16.0",
    "accelerate>=1.13.0",
    # PI0.5 (lerobot pi extra) requires transformers 5.4.x–5.5.x; 5.6+ breaks create_causal_mask API.
    "transformers>=5.4.0,<5.6.0",
]

[tool.uv.workspace]
members = [
    "lerobot",
    "openpi/packages/openpi-client",
]

[tool.uv.sources]
openpi-client = { workspace = true, editable = true }
lerobot = { workspace = true }
