[project]
name = "openpibot"
version = "0.1.0"
description = "OpenPiBot robot dashboard, VR teleop, recording, training, and inference tools."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "fastapi[standard]>=0.115.0",
    "lerobot[dataset,feetech,intelrealsense,kinematics,pi,viz]",
    "mani-skill>=3.0.1",
    "openpi-client>=0.1.2",
    "peft>=0.18.0,<1.0.0",
    "pynput>=1.8.2",
    "pygame>=2.5.1,<2.7.0",
    "pyyaml>=6.0.3",
    "rich>=13.9.0",
    "scipy>=1.14.0,<2.0.0",
    "typer>=0.12.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=16.0",
    "accelerate>=1.13.0",
    # PI0.5 (lerobot pi extra) requires transformers 5.4.x–5.5.x; 5.6+ breaks create_causal_mask API.
    "transformers>=5.4.0,<5.6.0",
    "torchcodec>=0.10.0",
]

[project.scripts]
openpibot = "openpibot.cli:app"
lerobot-dataset-viz = "openpibot.tools.lerobot_dataset_viz:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openpibot"]
artifacts = ["openpibot/prompts/*.txt"]

[tool.uv]
override-dependencies = [
    "numpy>=2.0.0,<2.3.0",
]

[tool.uv.workspace]
members = [
    "vendor/lerobot",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.uv.sources]
lerobot = { workspace = true }
